# alpaca-fleece

./: .env.example  .git_commit_msg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MEMORY.md  Makefile  README.md  alpaca-bot.service  constraints.txt  daemon.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  main.py  mypy.ini  nohup.out  orchestrator.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  zipcs.py
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pr_comment.md
.prompts/: 01-bootstrap.md
agents/: README.md  data_layer.md  infrastructure-worker.md  infrastructure.md  test_qa.md  trading.md
alpaca-fleece/: .gitignore  Dockerfile  Makefile  PROCESS_MANAGEMENT.md  alpaca-bot.service  bot.sh  docker-compose.yml  orchestrator.py
config/: trading.yaml
cs/: .gitignore  AdminUI.Dockerfile  AlpacaFleece.sln  Dockerfile  README.md  docker-compose.yml  run-admin-dev.sh  upgrade-nuget-packages.sh
csharp/: .gitignore  AlpacaFleece.sln  README.md  csharp-outdated.txt
data/: metrics.json  reconciliation_fix.json  trades.db-shm  trades.db-wal  trades.db.backup.1770662489
docs/: CODE_REVIEW_FIX_PLAN.md  DEV_WORKFLOW.md  EXIT_MANAGER_PLAN.md  PARALLEL_PROCESSING_ANALYSIS.md  PROMPT_DEVIATION_REPORT.md  PROMPT_SPEC_DEVIATION_REPORT.md
memory/: 2026-02-08-ci-best-practices.md  2026-02-08-improvement-roadmap.md  2026-02-08.md
py/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  constraints.txt  daemon.py  main.py  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_bot.sh
scripts/: spawn-with-standards.sh  spawn_agent.py  verify_boundaries.py
src/: async_broker_adapter.py  backup_manager.py  broker.py  config.py  data_handler.py  event_bus.py  exit_manager.py  health_check.py  housekeeping.py  logger.py  metrics.py  notifier.py  order_manager.py  position_tracker.py  rate_limiter.py  reconciliation.py  regime_detector.py  risk_manager.py  runtime_reconciler.py  schema_manager.py  state_store.py  stream.py  stream_polling.py
tests/: __init__.py  conftest.py  test_async_broker_adapter.py  test_async_broker_adapter_fatal.py  test_broker_limit_orders.py  test_broker_retry.py  test_broker_timeout.py  test_config.py  test_config_validation.py  test_data_parsing.py  test_end_to_end_trade.py  test_event_bus.py  test_eventbus_overflow.py  test_exit_deduplication.py  test_exit_manager.py  test_exit_manager_atr.py  test_exit_manager_atr_edgecases.py  test_exit_manager_branches.py  test_exit_manager_dynamic.py  test_exit_manager_public_api.py  test_exit_manager_publish_and_circuit.py  test_fill_tracking.py  test_housekeeping_backup.py  test_hybrid_trading.py  test_logger_redaction.py  test_metrics.py  test_multi_timeframe_sma.py  test_notifier.py  test_orchestrator_autosync.py  test_orchestrator_reconciliation.py  test_orchestrator_startup.py  test_order_manager.py  test_order_manager_positions_failure.py  test_order_update_persistence.py  test_order_updates_handler.py  test_partial_fills.py  test_persistence_mappers.py  test_pnl_calculation.py  test_position_tracker.py  test_position_tracker_long_activation.py  (+31 more)
tools/: analyse_signals.py  get_trading_status.py  sync_positions_from_alpaca.py  verify_reconciliation.py  (+1 more)
(+463 files in other folders)
