[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpaca-fleece"
version = "0.1.0"
description = "Event-driven algorithmic trading bot for Alpaca Markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.21.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.350",
    "ruff>=0.3.0",
    "anyio>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.350",
    "ruff>=0.3.0",
    "anyio>=4.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by line-length)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
include = ["src", "tests", "main.py"]
exclude = ["venv"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedVariable = true
reportUnusedFunction = true
reportPrivateUsage = true
reportUnnecessaryIsInstance = true
pythonVersion = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = []
asyncio_mode = "auto"
