[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpaca-bot"
version = "0.1.0"
description = "Production-ready event-driven Alpaca trading bot"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.2",
    "pandas==3.0.0",
    "pandas-ta==0.4.71b0",
    "numpy==2.2.6",
    "numba==0.61.2",
    "llvmlite==0.44.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "pytest-mock>=3.10.0", "pytest-cov>=4.1.0"]
dev = [
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",
    "types-pytz",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",
    "types-pytz",
]

[tool.mypy]
strict = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
